--- a/tax-calculator/src/index.css
+++ b/tax-calculator/src/index.css
@@ -8,7 +8,8 @@ body {
 }
 
 .calculator-container {
-  border-style: groove;
+  border-style: solid;
+  border-radius: 5px;
   border-width: 0.15rem;
   background: rgb(0, 217, 255);
   
@@ -35,7 +36,11 @@ body {
 }
 
 .calculation-container {
+  padding: 1rem;
+
   border-style: solid;
+  border-width: 0.15rem;
+  border-radius: 5px;
 }
 
 #after-tax {
